@@ -1,3 +1,8 @@
+2008-11-21  Stephane Delcroix  <sdelcroix@novell.com>
+
+	* Makefile.am:
+	* glib/Format.cs: new class to map the g_format methods
+
 2008-11-15  Mike Kestner  <mkestner@novell.com>
 
 	* gdk/Event.cs: add EventOwnerChange to GetEvent.
